# 0AD-Eyes

./: .gitignore  README.md  REQUIREMENTS.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: config.example.json  config.windows.json  configuration.md  engine-ground-truth-export.md  output-contract.md  vision-boundary.md
hooks/: pre-commit  pre-push
src/zero_ad_eyes/: __init__.py
src/zero_ad_eyes/application/: __init__.py  frames.py  pipeline.py  ports.py  settings.py
src/zero_ad_eyes/domain/: __init__.py  calibration.py  confidence.py  detections.py  entities.py  events.py  geometry.py  hud.py  minimap.py  motion.py  taxonomy.py  world_model.py
src/zero_ad_eyes/infrastructure/: __init__.py
src/zero_ad_eyes/interface/: __init__.py  cli.py  default_config.py  manual_calibration.py  overlay.py  record_replay.py
tests/: _hud_fixtures.py  conftest.py  preprocessing_support.py  test_acquisition_backpressure.py  test_acquisition_offline.py  test_acquisition_portal.py  test_acquisition_recorded_source.py  test_acquisition_recorder.py  test_acquisition_screen.py  test_acquisition_timing.py  test_acquisition_video_recorder.py  test_acquisition_wayland.py  test_calibration_layout.py  test_calibration_profiles.py  test_calibration_regions.py  test_calibration_selfcheck.py  test_cli_offline.py  test_config.py  test_config_acquisition.py  test_config_calibration.py  test_config_externalization.py  test_config_geometry.py  test_config_hud.py  test_config_minimap.py  test_config_perception_resources.py  test_config_perception_state.py  test_config_preprocessing.py  test_config_runtime.py  test_config_snapshot.py  test_config_tracking.py  test_contract_cadence.py  test_contract_example_client.py  test_contract_serialization.py  test_contract_versioning.py  test_data_annotation.py  test_data_dataset_collection.py  test_data_evaluation.py  test_data_ground_truth.py  test_data_harness.py  test_domain.py  (+40 more)
tests/hud/: support.py  test_cropping.py  test_parsing.py  test_reader.py  test_robustness.py  test_selection.py
tests/perception/: test_enrichment.py  test_health.py  test_masks.py  test_model.py  test_occlusion.py  test_ownership.py  test_resources.py  test_state.py  test_templates.py
(+92 files in other folders)
